added about me section

--- a/index.html
+++ b/index.html
@@ -55,15 +55,21 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about-me__body">
-            <p>Hi, I’m Anish, a Software engineer at Matchmove Pay. Passionate about creating beautiful, intuitive UI
+            <p>Hi, I’m Anish, a Software engineer at Matchmove Pay. I have around 2 years of professional web
+                developement experience. Passionate about creating beautiful, intuitive UI
                 for our top-tier clients. Demonstrated history of working in the information technology and services
                 industry. Skilled in ReactJS, Angular, Web development, Web Design, TypeScript, JavaScript, DOM
                 manipulation etc.</p>
-            <p>Looking for more experiences to learn more about career paths and ways to
+            <p>Looking for experiences to learn more about career paths and ways to
                 grow into the role of a Front-End/Full-Stack Developer in the next few years.</p>
         </div>
 
-        <img src="/assets/Anish.jpg" alt="Jane leaning against a bus" class="about-me__img">
+        <div class="pyramid">
+            <div class="side left"></div>
+            <div class="side front"></div>
+            <div class="side right"></div>
+            <div class="side back"></div>
+        </div>
     </section>
 
     <!-- My Skills -->
