add my work section

--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
 
     <!--My Work -->
     <section class="my-work" id="work">
-        <h2 class="section__title">My work</h2>
-        <p class="section__subtitle"></p>
+        <h2 class="section__title section__title--work">My work</h2>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
         <div class="portfolio">
             <!-- Portfolio item 01 -->
-            <a href="#" class="portfolio__item">
+            <div class="portfolio__item">
                 <img src="/assets/newsai.png" alt="" class="portfolio__img">
-            </a>
+            </div>
 
             <!-- Portfolio item 02 -->
-            <a href="#" class="portfolio__item">
+            <div class="portfolio__item">
                 <img src="/assets/chat-app.png" alt="" class="portfolio__img">
-            </a>
+            </div>
 
             <!-- Portfolio item 03 -->
-            <a href="#" class="portfolio__item">
+            <div class="portfolio__item">
                 <img src="/assets/corona.png" alt="" class="portfolio__img">
-            </a>
+            </div>
 
             <!-- Portfolio item 04 -->
-            <a href="#" class="portfolio__item">
+            <div class="portfolio__item">
                 <img src="/assets/game.png" alt="" class="portfolio__img">
-            </a>
+            </div>
         </div>
     </section>
 
