--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
         <!-- <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button> -->
-        <nav class="navbar">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+        <nav class="nav">
+            <ul>
+                <li class="home"><a href="#home" class="active"><i class="fa fa-home"
+                            aria-hidden="true"></i><span>Home</span></a></li>
+                <li class="about"><a href="#about"><i class="fa fa-user" aria-hidden="true"></i><span>About</span></a>
+                </li>
+                <li class="skills"><a href="#skills"><i class="fa fa-cog" aria-hidden="true"></i><span>Skills</span></a>
+                </li>
+                <li class="projects"><a href="#projects"><i class="fa fa-eye"
+                            aria-hidden="true"></i><span>Projects</span></a></li>
             </ul>
         </nav>
 
