--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="assets/devicon2.png" alt="dev-image">
+            <img src="assets/devicon2.png" alt="dev-image" loading="lazy">
         </div>
 
         <!-- <button class="nav-toggle" aria-label="toggle navigation">
@@ -33,10 +33,10 @@
                             aria-hidden="true"></i><span>Home</span></a></li>
                 <li class="about"><a href="#about"><i class="fa fa-user" aria-hidden="true"></i><span>About</span></a>
                 </li>
-                <li class="skills"><a href="#skills"><i class="fa fa-cog" aria-hidden="true"></i><span>Skills</span></a>
-                </li>
                 <li class="projects"><a href="#projects"><i class="fa fa-eye"
                             aria-hidden="true"></i><span>Projects</span></a></li>
+                <li class="skills"><a href="#skills"><i class="fa fa-cog" aria-hidden="true"></i><span>Skills</span></a>
+                </li>
             </ul>
         </nav>
 
@@ -80,8 +80,6 @@
         </div>
     </section>
 
-    <!-- My Skills -->
-
     <!--My Work -->
     <section class="my-work" id="projects">
         <h2 class="section__title section__title--work">My Projects</h2>
@@ -109,6 +107,14 @@
             </div>
         </div>
         <small>Many more coming soon...</small>
+    </section>
+
+    <!-- My Skills -->
+    <section class="my-skills" id="skills">
+        <h2 class="section__title section__title--work">My Skills</h2>
+        <div class="dev__univ">
+
+        </div>
     </section>
 
     <!-- Footer -->
