added skills section with animation and images

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about-me__body">
-            <p>Hi, I’m Anish, a Software engineer at Matchmove Pay. I have around 2 years of professional web
+            <p>Hi, I’m Anish, a Software engineer at Matchmove Pay. I have about 2+ years of professional web
                 developement experience. I'm passionate about creating beautiful, intuitive UI and have demonstrated
                 history of working in the information technology and services
-                industry. I'm skilled in ReactJS, Angular, Web development, Web Design, TypeScript, JavaScript, DOM
+                industry. I'm skilled in ReactJS, Angular, Web development,TypeScript, JavaScript, DOM
                 manipulation etc.</p>
-            <p>Looking for experiences to learn more about career paths and ways to
+            <p>I'm currently looking for experiences to learn more about career paths and ways to
                 grow into the role of a Front-End/Full-Stack Developer in the next few years.</p>
         </div>
 
@@ -111,8 +111,89 @@
 
     <!-- My Skills -->
     <section class="my-skills" id="skills">
-        <h2 class="section__title section__title--work">My Skills</h2>
+        <h2 class="section__title section__title--work">My Skills & Experience</h2>
         <div class="dev__univ">
+            <div class="dev__skills">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">
+                    <span>
+                        <img src="/assets/skills/html-skill.png" width="40px">
+                        <span class="skill__title">HTML</span>
+                    </span>
+                </a>
+
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                    <span>
+                        <img src="/assets/skills/css-skill.png" width="40px">
+                        <span class="skill__title">CSS</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/sass-skill.png" width="40px">
+                        <span class="skill__title">SASS</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/lodash-skill.png" width="40px">
+                        <span class="skill__title">Lodash</span>
+                    </span>
+                </a>
+
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/js-skill.png" width="40px">
+                        <span class="skill__title">JavaScript</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/npm-skill.png" width="40px">
+                        <span class="skill__title">NPM</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/angular-skill.png" width="40px">
+                        <span class="skill__title">Angular 2+</span>
+                    </span>
+                </a>
+
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/react-skill.png" width="40px">
+                        <span class="skill__title">Reactjs</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/redux-skill.png" width="40px">
+                        <span class="skill__title">Redux</span>
+                    </span>
+                </a>
+
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/node-skill.png" width="40px">
+                        <span class="skill__title">Nodejs</span>
+                    </span>
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
+                    target="_blank">
+                    <span>
+                        <img src="/assets/skills/git-skill.png" width="40px">
+                        <span class="skill__title">Git</span>
+                    </span>
+                </a>
+            </div>
 
         </div>
     </section>
