skills section done

--- a/index.html
+++ b/index.html
@@ -149,13 +149,9 @@
                         <span class="skill__title">JavaScript</span>
                     </span>
                 </a>
-                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
-                    target="_blank">
-                    <span>
-                        <img src="/assets/skills/npm-skill.png" width="40px">
-                        <span class="skill__title">NPM</span>
-                    </span>
-                </a>
+                <div class="rocket" class="margin-1">
+                    <img src="/assets/rocket.png" />
+                </div>
                 <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
                     target="_blank">
                     <span>
