--- a/index.html
+++ b/index.html
@@ -88,22 +88,80 @@
         <div class="portfolio">
             <!-- Portfolio item 01 -->
             <div class="portfolio__item">
-                <img src="/assets/newsai.png" alt="" class="portfolio__img">
+                <img src="/assets/newsai.png" alt="news-ai" class="portfolio__img">
+                <div class="portfolio__info">
+                    <span class="portfolio__header">News AI</span>
+                    <span class="portfolio__content">Voice controlled React News Application from Alan AI. <br /> Alan
+                        AI is a revolutionary speech recognition software that allows you to add voice capabilities.
+                        Just tap on the mic to start</span>
+                    <div class="portfolio__links">
+                        <a class="portfolio__link" href="https://github.com/Anishgoofle/news_ai" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a class="portfolio__link" href="https://newsai.ml" target="_blank">
+                            <img src="/assets/live.png" alt="live" width="40px" />
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <!-- Portfolio item 02 -->
             <div class="portfolio__item">
-                <img src="/assets/chat-app.png" alt="" class="portfolio__img">
+                <img src="/assets/chat-app.png" alt="chat-room" class="portfolio__img">
+                <div class="portfolio__info">
+                    <span class="portfolio__header">Chat Box</span>
+                    <span class="portfolio__content">Chat application created using Reactjs and Socket io. <br /> This
+                        is a very simple prototype of a chat application where you can sign in by entering your name and
+                        a room id and share
+                        the room link with people you want to interact.</span>
+                    <div class="portfolio__links">
+                        <a class="portfolio__link" href="https://github.com/Anishgoofle/chat-app" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a class="portfolio__link" href="https://roundtable.tk" target="_blank">
+                            <img src="/assets/live.png" alt="live" width="40px" />
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <!-- Portfolio item 03 -->
             <div class="portfolio__item">
-                <img src="/assets/corona.png" alt="" class="portfolio__img">
+                <img src="/assets/corona.png" alt="corona-tracker" class="portfolio__img">
+                <div class="portfolio__info">
+                    <span class="portfolio__header">Covid-19 Tracker</span>
+                    <span class="portfolio__content">As obvious from the title, this is a simple Reactjs project which
+                        is in trend currently. You can view the corona stats countrywise and worldwide.
+                        I used an api available online to fetch the stats data. </span>
+                    <div class="portfolio__links">
+                        <a class="portfolio__link" href="https://github.com/Anishgoofle/coronatracker" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a class="portfolio__link" href="https://corona-app.tk" target="_blank">
+                            <img src="/assets/live.png" alt="live" width="40px" />
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <!-- Portfolio item 04 -->
             <div class="portfolio__item">
-                <img src="/assets/game.png" alt="" class="portfolio__img">
+                <img src="/assets/game.png" alt="tennis-game" class="portfolio__img">
+                <div class="portfolio__info">
+                    <span class="portfolio__header">Tennis Game</span>
+                    <span class="portfolio__content">A simple tennis game developed using HTML5 Canvas and vanilla
+                        JavaScript. It also has a scoreboard which shows the user scores. It can be played by a single
+                        person as the other player is a bot, uh well not exactly but there are some cool JS tricks
+                        used to make it seem like one.</span>
+                    <div class="portfolio__links">
+                        <a class="portfolio__link" href="https://github.com/Anishgoofle/Tennis" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a class="portfolio__link" href="https://corona-app.tk" target="_blank">
+                            <img src="/assets/live.png" alt="live" width="40px" />
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <small>Many more coming soon...</small>
