added live version for html project

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <a class="portfolio__link" href="https://github.com/Anishgoofle/Tennis" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a class="portfolio__link" href="https://corona-app.tk" target="_blank">
+                        <a class="portfolio__link" href="https://tennisgame.netlify.app" target="_blank">
                             <img src="/assets/live.png" alt="live" width="40px" />
                         </a>
                     </div>
