--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="assets/devicon2.png" alt="dev-image" loading="lazy">
-        </div>
 
-        <!-- <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button> -->
-        <nav class="nav">
+    <nav class="navbar">
+        <div class="logo">
+            <img src="assets/devicon2.png" alt="dev-image">
+        </div>
+        <a href="#" class="nav-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
             <ul>
                 <li class="home"><a href="#home" class="active"><i class="fa fa-home"
                             aria-hidden="true"></i><span>Home</span></a></li>
@@ -38,10 +40,9 @@
                 <li class="skills"><a href="#skills"><i class="fa fa-cog" aria-hidden="true"></i><span>Skills</span></a>
                 </li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 
-
-    </header>
 
     <!-- Introduction -->
     <section class="intro" id="home">
