--- a/index.html
+++ b/index.html
@@ -149,16 +149,14 @@
             <div class="portfolio__item">
                 <img src="/assets/game.png" alt="tennis-game" class="portfolio__img">
                 <div class="portfolio__info">
-                    <span class="portfolio__header">Tennis Game</span>
-                    <span class="portfolio__content">A simple tennis game developed using HTML5 Canvas and vanilla
-                        JavaScript. It also has a scoreboard which shows the user scores. It can be played by a single
-                        person as the other player is a bot, uh well not exactly but there are some cool JS tricks
-                        used to make it seem like one.</span>
+                    <span class="portfolio__header">Shoot Arcade</span>
+                    <span class="portfolio__content">An Arcade game based on shooting particles to eradicate enemies
+                        until time runs out.Developed purely using HTML,CSS and Javascript.</span>
                     <div class="portfolio__links">
-                        <a class="portfolio__link" href="https://github.com/Anishgoofle/Tennis" target="_blank">
+                        <a class="portfolio__link" href="https://github.com/Anishgoofle/Shoot-Cloud" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a class="portfolio__link" href="https://tennisgame.netlify.app" target="_blank">
+                        <a class="portfolio__link" href="https://shoot-arcade.netlify.app" target="_blank">
                             <img src="/assets/live.png" alt="live" width="40px" />
                         </a>
                     </div>
