--- a/index.html
+++ b/index.html
@@ -147,11 +147,12 @@
 
             <!-- Portfolio item 04 -->
             <div class="portfolio__item">
-                <img src="/assets/game.png" alt="tennis-game" class="portfolio__img">
+                <img src="/assets/shoot.png" alt="tennis-game" class="portfolio__img">
                 <div class="portfolio__info">
                     <span class="portfolio__header">Shoot Arcade</span>
-                    <span class="portfolio__content">An Arcade game based on shooting particles to eradicate enemies
-                        until time runs out.Developed purely using HTML,CSS and Javascript.</span>
+                    <span class="portfolio__content">An arcade game based on shooting particles to escape enemy
+                        particles from colliding until time runs out.Also contains a scoreboard to display at the end of
+                        the game.Developed purely using HTML,CSS and Javascript.</span>
                     <div class="portfolio__links">
                         <a class="portfolio__link" href="https://github.com/Anishgoofle/Shoot-Cloud" target="_blank">
                             <i class="fab fa-github"></i>
