Revert "changes in summary"

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about-me__body">
-            <p>Hi, I’m Anish, a Software engineer at Paytm. I have about 3+ years of professional web
+            <p>Hi, I’m Anish, a Software engineer at Matchmove Pay. I have about 2+ years of professional web
                 developement experience. I'm passionate about creating beautiful, intuitive UI and have demonstrated
                 history of working in the information technology and services
                 industry. I'm skilled in ReactJS, Angular, Web development,TypeScript, JavaScript, DOM
