--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Hi, I am <strong>Anish Ojha</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">A <span class="txt-type" data-wait="3000"
-                data-words='["Web Developer", "Technology Enthusiast", "Problem Solver", "JavaScript addict &hearts;"]'></span>
+                data-words='["Web Engineer", "Technology Enthusiast", "Problem Solver", "Typescript addict &hearts;"]'></span>
         </p>
         <img src="assets/Anish.jpg" alt="My-image" class="intro__img">
     </section>
@@ -64,13 +64,15 @@
         <p class="section__subtitle section__subtitle--about"></p>
 
         <div class="about-me__body">
-            <p>Hi, I’m Anish, a Software engineer at Paytm. I have about 3+ years of professional web
-                developement experience. I'm passionate about creating beautiful, intuitive UI and have demonstrated
-                history of working in the information technology and services
-                industry. I'm skilled in ReactJS, Angular, Web development,TypeScript, JavaScript, DOM
-                manipulation etc.</p>
-            <p>I'm currently looking for experiences to learn more about career paths and ways to
-                grow into the role of a Front-End/Full-Stack Developer in the next few years.</p>
+           <p>Hi, I’m Anish, a Senior Frontend Engineer with around 7 years of experience building high-performance,
+              scalable, and secure web applications at PhonePe. I specialize in modern web technologies
+              like React, TypeScript with deep expertise in performance optimization, web security, and
+              intuitive UI/UX design.</p>
+
+           <p>I have a proven track record of owning end-to-end product features used by a huge amount of consumers, collaborating
+              closely with cross-functional teams, and mentoring engineers on best practices. Currently, I’m focused
+              on frontend architecture, microfrontends, and delivering seamless user experiences that combine speed,
+              reliability, and design excellence.</p>
         </div>
 
         <div class="pyramid">
@@ -210,13 +212,6 @@
                 <div class="rocket" class="margin-1">
                     <img src="/assets/rocket.png" />
                 </div>
-                <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
-                    target="_blank">
-                    <span>
-                        <img src="/assets/skills/angular-skill.png" width="40px">
-                        <span class="skill__title">Angular 2+</span>
-                    </span>
-                </a>
 
                 <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics"
                     target="_blank">
