--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <a class="portfolio__link" href="https://github.com/Anishgoofle/news_ai" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a class="portfolio__link" href="https://newsai.ml" target="_blank">
+                        <a class="portfolio__link" href="https://voicenews.netlify.app" target="_blank">
                             <img src="/assets/live.png" alt="live" width="40px" />
                         </a>
                     </div>
@@ -121,7 +121,7 @@
                         <a class="portfolio__link" href="https://github.com/Anishgoofle/chat-app" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a class="portfolio__link" href="https://roundtable.tk" target="_blank">
+                        <a class="portfolio__link" href="https://tennisgame.netlify.app" target="_blank">
                             <img src="/assets/live.png" alt="live" width="40px" />
                         </a>
                     </div>
@@ -140,7 +140,7 @@
                         <a class="portfolio__link" href="https://github.com/Anishgoofle/coronatracker" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a class="portfolio__link" href="https://corona-app.tk" target="_blank">
+                        <a class="portfolio__link" href="https://globalcorona.netlify.app" target="_blank">
                             <img src="/assets/live.png" alt="live" width="40px" />
                         </a>
                     </div>
